--- a/01-point-pattern-analysis-vignette.qmd
+++ b/01-point-pattern-analysis-vignette.qmd
@@ -1,33 +1,31 @@
 ---
-title: "Point Pattern Analysis Vignette"
+title: "SIB Days 2024 PASTA Workshop: Point Pattern Analysis Vignette"
 author: "Martin Emons, Samuel Gunz, Mark D. Robinson"
 format: html
 editor: visual
+editor_options: 
+  chunk_output_type: console
 ---
 
 ## Introduction
 
-Cells or transcripts can be approximated as points given their location. 
+Cells (or transcripts) can be approximated as points given their location.
 
 ### `spatstat` package and `ppp` object
 
-The central package to analyse point patterns in `R` is called `spatstat` [@baddeleySpatstatPackageAnalyzing2005]. The main data object to compute on is 
-called a `ppp` object. `ppp` objects describe point patterns in two dimensional
-space, `ppx` objects create multidimensional point patterns. A `ppp` object is
-is made up of three specifications [@baddeleySpatstatPackageAnalyzing2005]:
+The central package to analyse point patterns in `R` is called `spatstat` [@baddeleySpatstatPackageAnalyzing2005]. The main data object to compute on is called a `ppp` object. `ppp` objects describe point patterns in two dimensional space, `ppx` objects create multidimensional point patterns. A `ppp` object is is made up of three specifications [@baddeleySpatstatPackageAnalyzing2005]:
 
-- The locations of the points in question ($x$,$y$ and, optionally, $z$ coordinates)
-- The observation window
-- The associated marks to each point in the pattern
+-   The locations of the points in question ($x$,$y$ and, optionally, $z$ coordinates)
+-   The observation window
+-   The associated marks to each point in the pattern
 
-On this central object from `spatstat` metrics can be calculated. 
+On this central object, various `spatstat` metrics can be calculated.
 
 ### `SpatialExperiment` Object
 
- ![Structure of a `SpatialExperiment` object as introduced by Righelli et al. ](https://raw.githubusercontent.com/drighelli/SpatialExperiment/devel/vignettes/SPE.png) 
- 
-The input to `pasta` is a `SpatialExperiment` object. This is a central object
-in the `BioConductor` framework to store spatial transcriptomics data. 
+![Structure of a `SpatialExperiment` object as introduced by Righelli et al.](https://raw.githubusercontent.com/drighelli/SpatialExperiment/devel/vignettes/SPE.png)
+
+Often, the starting point in spatial omics data analysis is a `SpatialExperiment` (or similar) object. This is a central data structure in the `BioConductor` framework to store spatial omics data.
 
 ```{r}
 #| label: load-data
@@ -38,14 +36,9 @@ spe <- readRDS("data/spe.rds")
 spe
 ```
 
-We see that we have an object of class `SpatialExperiment` with $161$ genes (rows)
-and $73655$ cells. This object is very similar to a `SingleCellExperiment` object
-except it has the added `spatialCoords` slot. One slot in the `colData` is called
-`sample_id` which defines the so called z-slices. The three dimensional tissue
-is cut in the z-axis into consecutive two dimensional slices [@righelliSpatialExperimentInfrastructureSpatiallyresolved2022]. 
+We see that we have an object of class `SpatialExperiment` with $161$ genes (rows) and $73655$ cells. This object is very similar to a `SingleCellExperiment` object except it has the added `spatialCoords` slot. One slot in the `colData` is called `sample_id` which defines the so called z-slices. The three dimensional tissue is cut in the z-axis into consecutive two dimensional slices [@righelliSpatialExperimentInfrastructureSpatiallyresolved2022].
 
-Next, we want to extract three slices of this `SpatialExperiment` object and
-convert the 2D slices into `ppp` objects.
+Next, we want to extract three slices of this `SpatialExperiment` object and convert the 2D slices into `ppp` objects.
 
 ```{r}
 # define the Z-stacks that you want to compare
@@ -56,23 +49,27 @@ selectZstacks <- function(zstack, spe) {
   pp <- .ppp(sub, marks = "cluster_id")
   return(pp)
 }
-pp_ls <- lapply(zstack_list, selectZstacks, spe)
-names(pp_ls) <- zstack_list
+# [MR compact alternative]
+selectZstacks <- function(zstack, spe) {
+  spe[, spe$sample_id == zstack] |> 
+    .ppp(marks = "cluster_id")
+}
+pp_ls <- lapply(zstack_list, selectZstacks, spe) |>
+  setNames(zstack_list)
 
 pp_ls
 ```
 
-We see that we obtain a list of three `ppp` objects for the three z-slices
-$-0.09, 0.01, 0.21$. 
+We see that we obtain a list of three `ppp` objects for the three z-slices $-0.09, 0.01, 0.21$.
 
 We can plot one of these slices, e.g. slice $-0.09$ with ggplot
 
 ```{r}
 # create a dataframe from the point pattern
-pp_df <- pp_ls[[1]] %>% as.data.frame()
+pp_df <- pp_ls$`-0.09` %>% as.data.frame
 # plot with ggplot
 ggplot(pp_df, aes(x, y, colour = marks)) +
-  geom_point(size = 0.5) +
+  geom_point(size = 1) +
   theme_light() +
   coord_equal()
 ```
@@ -81,18 +78,18 @@ ggplot(pp_df, aes(x, y, colour = marks)) +
 
 As stated above, one important aspect of a point pattern is the observation window. It represents the region in which a pattern is observed or e.g. a survey was conducted [@baddeleySpatialPointPatterns2015, pp. 85]. In most microscopy use cases we encounter window sampling. Window sampling describes the case where we don't observe the entire point pattern in a window but just a sample [@baddeleySpatialPointPatterns2015, pp. 143-145].
 
-The window of a point pattern does not have to be quadratic, we can receive round biopsies or calculate convex hulls around our sample [@baddeleySpatialPointPatterns2015, pp. 143-145]. 
+The window of a point pattern does not need to be rectangular; we can receive round biopsies or calculate convex hulls around our sample [@baddeleySpatialPointPatterns2015, pp. 143-145].
 
-Let's investigate the observation window a bit for the slice $-0.09$.
+Let's investigate the observation window for the slice $-0.09$.
 
 ```{r}
 # subset point pattern list
-pp_sub <- pp_ls[["-0.09"]]
+pp_sub <- pp_ls$`-0.09`
 # base R plot of all marks
 pp_sub |> plot()
 ```
 
-Here, we have a quadratic window around all points. 
+Here, we have a rectangular window around all points.
 
 Let's investigate what a round window would look like:
 
@@ -104,11 +101,11 @@ Window(pp_sub_round) <- w
 pp_sub_round |> plot()
 ```
 
-Correctly assigning windows is very important. The window should represent the space where points are expected. This means, in window sampling one should not restrict the window. This would lead to a false underestimation of the area where the points can be potentially observed. This problem of where we can observe points and where not (beyond the boundary of the window) leads to a range of problems collectivley called edge effects [@baddeleySpatialPointPatterns2015, pp. 143-145]. We will discuss them later.
+Correctly assigning windows is very important. The window should represent the space where points are expected. This means, in window sampling, one should not restrict the window. This would lead to a false underestimation of the area where the points can be potentially observed. This problem of where we can observe points and where not (beyond the boundary of the window) leads to a range of problems collectively called edge effects [@baddeleySpatialPointPatterns2015, pp. 143-145]. We will discuss these later.
 
 ### Marks
 
-The next point that defines a point pattern is the marks associated with the points. The points can have as well no marks which we call an unmarked point pattern
+The next concept that defines a point pattern is that marks can be associated with the points. The points can also have no marks, which we would call an unmarked point pattern
 
 ```{r}
 unmark(pp_sub) |> plot()
@@ -118,7 +115,7 @@ Marks can be univariate or multivariate variables that are associated with the p
 
 #### Discrete Marks
 
-In our example we have a multitype point pattern, meaning there are different cell types that serve as marks for the point pattern. Multitype means that we consider all marks together. The opposite is multivariate, where we consider the marks independently [@baddeleySpatialPointPatterns2015, pp. 565 ff.]. 
+In our example, we have a multitype point pattern, meaning there are different cell types that serve as marks for the point pattern. Multitype means that we consider all marks together. The opposite is multivariate, where we consider the marks independently [@baddeleySpatialPointPatterns2015, pp. 565 ff.].
 
 First the multitype case:
 
@@ -136,7 +133,7 @@ pp_sub |>
 
 #### Continuous Marks
 
-Marks can as well be continuous as in the case of gene expression. We choose some genes from the original paper and look at their distribution [@baddeleySpatialPointPatterns2015 pp. 637] [@moffittMolecularSpatialFunctional2018]. 
+Marks can as well be continuous as in the case of gene expression. We choose some genes from the original paper and look at their distribution [@baddeleySpatialPointPatterns2015 pp. 637] [@moffittMolecularSpatialFunctional2018].
 
 ```{r}
 # subset the original SpatialExperiment to our example slide -0.09
@@ -152,7 +149,7 @@ gex <- assay(sub)[genes, ] %>%
 marks(pp_sub) <- gex
 ```
 
-Now that we points with multivariate continuous marks
+Now that we have points with multivariate continuous marks
 
 ```{r, fig.height=5, fig.width=10}
 # create a dataframe in long format for plotting
@@ -168,11 +165,11 @@ ggplot(pp_df, aes(x, y, colour = log(value + 1))) +
   scale_color_continuous(type = "viridis")
 ```
 
-We note that the distribution of expression of the genes `Pgr` and `Slc18a2` is very evenly distributed with some elevations in the middle of the structure. `Esr1` shows a half-circle like structure in expression. Note that the expression is here  log transformed counts plus one (to avoid problems with log of zero). 
+We note that the distribution of expression of the genes `Pgr` and `Slc18a2` is very evenly distributed with some elevations in the middle of the structure. `Esr1` shows a half-circle like structure in expression. Note that the expression is here log transformed counts offset by one (to avoid problems with log of zero).
 
 #### Within Mark Comparison
 
-We can compare patterns between marks of the same type. This is referred to as a within mark comparison in our vignette. We can compare discrete marks, so the distribution of one single mark, e.g. a cell type. 
+We can compare patterns between marks of the same type. This is referred to as a within mark comparison in our vignette. We can compare discrete marks, so the distribution of one single mark, e.g. a cell type.
 
 ```{r, fig.height=5, fig.width=10}
 # create a dataframe from the point pattern
@@ -180,6 +177,10 @@ pp_df <- lapply(zstack_list, function(x) {
   df <- pp_ls[[x]] %>% as.data.frame()
   df$stack <- x
   return(df)
+}) %>% bind_rows()
+
+pp_df <- lapply(zstack_list, function(x) {
+  pp_ls[[x]] |> as.data.frame |> mutate(stack = x)
 }) %>% bind_rows()
 
 # select OD Mature cells
@@ -192,7 +193,7 @@ ggplot(pp_df_odmature, aes(x, y, colour = marks)) +
   theme(aspect.ratio = 1)
 ```
 
-Here, we plot the distribution of mature oligodendrocytes across three slices of one 3D brain sample. 
+Here, we plot the distribution of mature oligodendrocytes across three slices of one 3D brain sample.
 
 Continuous marks can be compared as well, e.g. the expression of a gene across slices of a tissue
 
@@ -222,11 +223,11 @@ ggplot(pp_df, aes(x, y, colour = log(Esr1 + 1))) +
   scale_color_continuous(type = "viridis")
 ```
 
-We note that the gene `Esr1` is differentially distributed across the slices of the 3D sample. 
+We note that the gene `Esr1` is differentially distributed across the slices of the 3D sample.
 
 #### Correlation
 
-Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$. This is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204].
+Correlation is a second order quantity that measures the dependence between points [@baddeleySpatialPointPatterns2015 pp. 199]. A famous way to measure this is with Ripley's $K$, which is a cumulative function that quantifies the "number of $r$-neighbours of a typical random point" [@baddeleySpatialPointPatterns2015, pp. 204].
 
 ##### Global Measures
 
@@ -238,9 +239,9 @@ $$
 
 In the formula above we note a few things:
 
-- The function is normalised by the number of points $n$ and the window size $|W|$
+-   The function is normalised by the number of points $n$ and the window size $|W|$
 
-- the term $e_{ij}(r)$ is an edge correction - see the section on `border corrections` further down in the vignette.
+-   the term $e_{ij}(r)$ is an edge correction - see the section on `border corrections` further down in the vignette.
 
 Ripley's $K$ function can be variance stabilised, which is referred to as Besag's $L$ [@caneteSpicyRSpatialAnalysis2022]. The idea behind variance stabilisation is to "uncouple" the relationship between mean and variance. By taking the square root of the function in question, the variance is nearly constant across the function [@bartlettUseTransformations1947].
 
@@ -254,7 +255,8 @@ calcMetric <- function(fun, pp_ls, by, celltype, continuous = FALSE) {
     if (continuous) {
       pp_sub <- subset(pp_ls[[x]], select = celltype)
     } else {
-      pp_sub <- subset(pp_ls[[x]], marks %in% celltype, drop = TRUE)
+      pp_sub <- subset(pp_ls[[x]], 
+                       marks %in% celltype, drop = TRUE)
     }
 
     res <- do.call(fun, args = list(X = pp_sub))
@@ -267,14 +269,14 @@ calcMetric <- function(fun, pp_ls, by, celltype, continuous = FALSE) {
 res1 <- calcMetric("Kest", pp_ls, zstack_list, "OD Mature")
 
 p <- ggplot(res1, aes(r, iso, colour = stack)) +
-  geom_line() +
+  geom_line(linewidth = 2) +
   theme_light() +
   geom_line(aes(x = r, y = theo), linetype = "dashed", color = "black")
 
 res2 <- calcMetric("Lest", pp_ls, zstack_list, "OD Mature")
 
 q <- ggplot(res2, aes(r, iso, colour = stack)) +
-  geom_line() +
+  geom_line(linewidth = 2) +
   theme_light() +
   geom_line(aes(x = r, y = theo), linetype = "dashed", color = "black")
 ```
@@ -304,21 +306,23 @@ pp <- lapply(zstack_list, function(x) {
   # gene expression to marks [ME: is it really expression?]
   marks(pp) <- gex
   return(pp)
-})
-names(pp) <- zstack_list
+}) |> setNames(zstack_list)
+
 # calculate the metric for example slide '-0.09'
-res <- calcMetric("markcorr", pp, zstack_list, "Esr1", continuous = TRUE)
+res <- calcMetric("markcorr", pp, zstack_list, 
+                  "Esr1", continuous = TRUE)
 p <- ggplot(res, aes(r, iso, colour = stack)) +
-  geom_line() +
+  geom_line(linewidth = 2) +
   theme_light() +
-  geom_line(aes(x = r, y = theo), linetype = "dashed", color = "black")
+  geom_line(aes(x = r, y = theo), 
+            linetype = "dashed", color = "black")
 
 p
 ```
 
 ##### Local Measures
 
-Next to observation window metrics, we can calculate point level statistics as well. One such option is the local indicators of spatial association (LISA). This gives one curve per  point in the field of view [@baddeleySpatialPointPatterns2015 pp. 247-248].
+Next to observation window metrics, we can calculate point level statistics as well. One such option is the local indicators of spatial association (LISA). This gives one curve per point in the field of view [@baddeleySpatialPointPatterns2015 pp. 247-248].
 
 ```{r, message = FALSE, warning=FALSE, fig.height=5, fig.width=10, results='hide'}
 pp <- subset(pp_ls[["0.01"]], marks %in% "OD Mature")
@@ -355,7 +359,9 @@ The same analysis as above can be performed between two celltypes. The correspon
 
 ```{r, message = FALSE, warning=FALSE, fig.height=5, fig.width=10, results='hide'}
 # to be deleted from the handed out version
-res <- calcMetric("Lcross", pp_ls, by = zstack_list, celltype = c("OD Mature", "Microglia"), continuous = FALSE)
+res <- calcMetric("Lcross", pp_ls, by = zstack_list, 
+                  celltype = c("OD Mature", "Microglia"), 
+                  continuous = FALSE)
 
 q <- ggplot(res, aes(r, iso, colour = stack)) +
   geom_line() +
@@ -367,7 +373,7 @@ q <- ggplot(res, aes(r, iso, colour = stack)) +
 q
 ```
 
-Your turn: try to compare the colocalisation of `OD Mature` and `Ependymal`cells. Again, the documentation of `spatstat.explore` will help you to find good cross functions. 
+Your turn: try to compare the colocalisation of `OD Mature` and `Ependymal`cells. Again, the documentation of `spatstat.explore` will help you to find good cross functions.
 
 ### Edge effects and their corrections for spatial metrics
 
@@ -389,15 +395,15 @@ A stationary point process $X$ is invariant to translations. So the entire point
 
 ## Summary and Considerations
 
-- Point patterns are realisations of a point process. In the analysis we make inferences about the point process.
+-   Point patterns are realisations of a point process. In the analysis we make inferences about the point process.
 
-- A point process assumes stochasticity. Therefore, HTS-based approaches are not suitable for point pattern analysis
+-   A point process assumes stochasticity. Therefore, HTS-based approaches are not suitable for point pattern analysis
 
-- There are global metrics for the comparison within a celltype or between celltypes
+-   There are global metrics for the comparison within a celltype or between celltypes
 
-- There are corresponding metrics for single cells and their interactions
+-   There are corresponding metrics for single cells and their interactions
 
-- Point pattern analysis allows for the analysis of continuous gene expression marks as well.
+-   Point pattern analysis allows for the analysis of continuous gene expression marks as well.
 
 ```{r}
 sessionInfo()
